# studio-inventory

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
frontend/src/: App.vue  BarcodeSvg.vue  PriceCalculator.vue  QrCodeSvg.vue  ScannerCommandCard.vue  commandCardData.json  index.css  labelCatalog.js  main.js  paperSearch.js  receiveForm.js  scannerCommands.js
frontend/test/: barcodeStyles.test.mjs  estimateWorkflow.test.mjs  labelCatalog.test.mjs  mobileStyles.test.mjs  paperSearch.test.mjs  receiveForm.test.mjs  scannerCommands.test.mjs
scripts/: generate_command_card.py
studio_inventory/: api.py  crm_bridge.py  domain.py  hooks.py  modules.txt  navigation.py  permissions.py  pricing.py  pricing_api.py  pricing_model.py  setup.py
studio_inventory/public/js/: quotation.js  sales_order.js
studio_inventory/studio_inventory/doctype/studio_inventory_settings/: studio_inventory_settings.json  studio_inventory_settings.py
studio_inventory/studio_inventory/doctype/studio_pricing_model/: studio_pricing_model.json  studio_pricing_model.py
studio_inventory/studio_inventory/doctype/studio_pricing_rule/: studio_pricing_rule.json  studio_pricing_rule.py
studio_inventory/translations/: en.csv
studio_inventory/www/: studio_inventory.py
tests/: test_api_import.py  test_domain.py  test_hooks.py  test_navigation.py  test_pricing.py  test_pricing_api_import.py  test_pricing_model.py  test_setup_import.py
(+2 files in other folders)
