[project]
name = "studio_inventory"
authors = [{ name = "Tyler Miller" }]
description = "Studio inventory and print-pricing workflows backed by native ERPNext records"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
command-card = ["reportlab>=4.4,<5"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[tool.bench.assets]
build_dir = "./frontend"
out_dir = "../studio_inventory/public/frontend"
index_html_path = "../studio_inventory/www/studio_inventory.html"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
